src/index.css
@import "tailwindcss";

@theme {
  --font-sans: "Google Sans", sans-serif;
}

@layer base {
  * {
    box-sizing: border-box;
  }
}

@layer components {
  
  .main .search-box .icons svg {
    width: 22px;
    height: 22px;
    cursor: pointer;
    stroke: #585858;
  }
  
}

@keyframes shimmer {
  0% { background-position: 200% 0; }
  100% { background-position: -200% 0; }
}

#root {
  min-height: 100vh;
  display: flex;
}

